infra/k8s/redirect-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-service
  labels: { app: redirect-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: redirect-service }
  template:
    metadata:
      labels: { app: redirect-service }
    spec:
      serviceAccountName: redirect-service-sa
      containers:
        - name: redirect-service
          image: 834922934330.dkr.ecr.ap-southeast-1.amazonaws.com/redirect-service:latest
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            periodSeconds: 10
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            periodSeconds: 10
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits:   { cpu: 500m, memory: 1Gi }
