infra/k8s/management-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: management-service
spec:
  selector:
    app: management-service
  ports:
    - port: 8080
      targetPort: 8080
