infra/k8s/redirect-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
spec:
  selector:
    app: redirect-service
  ports:
    - port: 8080
      targetPort: 8080
